# qyh_jushen_ws

./: .gitignore  CLUTCH_MODE_IMPLEMENTATION_PLAN.md  DEVELOPMENT_SUMMARY.md  EMBODIED_AI_TASK_FRAMEWORK.md  JETSON_DEPLOYMENT_CHECKLIST.md  PHASE1_COMPLETION_REPORT.md  README.md  SERVO_TEST_REDESIGN.md  TELEOPERATION_INTEGRATION_GUIDE.md  TODO  TODO.txt  VR_CLUTCH_TEST_GUIDE.md  VR_DATA_FLOW.md  VR_REAL_ROBOT_GUIDE.md  VR_ROBOT_ALIGNMENT_SOLUTIONS.md  VR_ROBOT_COORDINATE_TRANSFORM.md  VR_SIMULATION_QUICK_START.md  VR_TELEOPERATION_ARCHITECTURE.md  bringup_ros.sh.x  config.bash  create_symlinks.sh  test_euler_conversion.py
qyh_jushen_ws/src/jaka_control/: CHANGELOG.md  CMakeLists.txt  GUI_USAGE.md  IMPORTANT_NOTE.md  QUICK_START.md  README.md  SERVO_CONTROL.md  package.xml
qyh_jushen_ws/src/jaka_control/config/: robot_config.yaml
qyh_jushen_ws/src/jaka_control/launch/: jaka_robot.launch.py
qyh_jushen_ws/src/jaka_control/msg/: CartesianPose.msg  JointPosition.msg  RobotStatus.msg
qyh_jushen_ws/src/jaka_control/scripts/: example_control.py  example_servo_control.py  gui_joint_control.py
qyh_jushen_ws/src/jaka_control/src/: jaka_robot_interface.cpp  jaka_robot_node.cpp
qyh_jushen_ws/src/jaka_control/srv/: GetRobotState.srv  MoveJ.srv  MoveL.srv  PowerOff.srv  ServoJ.srv  ServoMoveEnable.srv  ServoP.srv  SetServoFilter.srv
qyh_jushen_ws/src/qyh_bag_recorder/: package.xml
qyh_jushen_ws/src/qyh_bag_recorder/src/: bag_recorder_node.cpp
qyh_jushen_ws/src/qyh_bag_recorder/srv/: StartRecording.srv
qyh_jushen_ws/src/qyh_coordinate_mapper/: CMakeLists.txt  README.md  package.xml
qyh_jushen_ws/src/qyh_coordinate_mapper/config/: mapper_params.yaml
qyh_jushen_ws/src/qyh_coordinate_mapper/launch/: coordinate_mapper.launch.py
qyh_jushen_ws/src/qyh_coordinate_mapper/src/: coordinate_mapper_node.cpp
qyh_jushen_ws/src/qyh_dual_arm_ik_solver/: CMakeLists.txt  COORDINATE_SYSTEM_FIX.md  README.md  package.xml  test_ik_solver.sh
qyh_jushen_ws/src/qyh_dual_arm_ik_solver/config/: ik_solver_params.yaml
qyh_jushen_ws/src/qyh_dual_arm_ik_solver/launch/: ik_solver.launch.py
qyh_jushen_ws/src/qyh_dual_arm_ik_solver/scripts/: test_publish_targets.py
qyh_jushen_ws/src/qyh_dual_arm_ik_solver/src/: dual_arm_ik_solver_node.cpp
qyh_jushen_ws/src/qyh_dual_arm_teleop/: CMakeLists.txt  README.md  package.xml
qyh_jushen_ws/src/qyh_dual_arm_teleop/config/: teleop_params.yaml
qyh_jushen_ws/src/qyh_dual_arms_moveit_config/: CMakeLists.txt  package.xml
qyh_jushen_ws/src/qyh_gripper_control/: CMakeLists.txt  package.xml
qyh_jushen_ws/src/qyh_gripper_gui/: README.md  package.xml  setup.cfg  setup.py
qyh_jushen_ws/src/qyh_gripper_msgs/: CMakeLists.txt  README.md  package.xml
qyh_jushen_ws/src/qyh_head_control/: CMakeLists.txt  QUICK_SERVO_SETUP.md  README.md  SERVO_ID_SETUP.md  package.xml  setup.py
qyh_jushen_ws/src/qyh_head_motor_control/: CMakeLists.txt  README.md
qyh_jushen_ws/src/qyh_jaka_control/: CMakeLists.txt  DEPLOYMENT.md  EDG_SAFETY_FIX.md  README.md  SERVO_FIX.md  SMOOTHNESS_OPTIMIZATION.md  VELOCITY_CONTROL_FIXES.md  VELOCITY_LIMITING.md  package.xml  正逆解说明.md
qyh_jushen_ws/src/qyh_jaka_control_gui/: README.md  package.xml  setup.cfg  setup.py
qyh_jushen_ws/src/qyh_jaka_control_msgs/: CMakeLists.txt  README.md  package.xml
qyh_jushen_ws/src/qyh_jaka_control_msgs/srv/: Jog.srv  (+8 more)
qyh_jushen_ws/src/qyh_jaka_ik_test/: CMakeLists.txt  QUICK_TEST.md  README.md  package.xml
src/qyh_act_inference/: CMakeLists.txt  README.md  package.xml
src/qyh_act_inference/config/: act_inference.yaml
src/qyh_act_inference/launch/: act_inference.launch.py
src/qyh_act_inference/qyh_act_inference/: __init__.py  act_policy.py  act_skill_node.py  action_executor.py  inference_config.py  model_builder.py
src/qyh_act_inference/scripts/: act_inference_node.py  test_act_inference.py
src/qyh_bag_recorder/: CMakeLists.txt
src/qyh_bag_recorder/launch/: bag_recorder.launch.py
src/qyh_bag_recorder/src/: bag_recorder_node.cpp
src/qyh_bag_recorder/srv/: GetRecordingStatus.srv  StopRecording.srv
src/qyh_dual_arms_description/: CMakeLists.txt  VR_BRIDGE_README.md  VR_COORDINATE_SYSTEM.md  package.xml
src/qyh_dual_arms_description/launch/: gazebo.launch.py  print.launch.py  vr_bridge.launch.py
src/qyh_dual_arms_description/meshes/: base_link.STL  lt.STL  r6.STL
src/qyh_dual_arms_description/scripts/: calibrate_vr_mapping.py  force_j4_zero.py  vr_to_base_vr.py
src/qyh_dual_arms_description/urdf/: dual_arms_dis_20cm.urdf
src/qyh_gripper_control/: CMakeLists.txt
src/qyh_gripper_control/config/: gripper.yaml
src/qyh_gripper_control/launch/: gripper.launch.py
src/qyh_gripper_control/src/: gripper_control_node.cpp  gripper_control_node.hpp  gripper_control_node_main.cpp
src/qyh_jaka_control/: CMakeLists.txt  IK_INTEGRATION.md  JOINT_ADAPTER_GUIDE.md  POSITION_VS_VELOCITY_CONTROL.md  QUICK_REFERENCE.md  README.md  REFACTORING_SUMMARY.md  VELOCITY_CONTROL_CLEANUP.md  VELOCITY_INTEGRATION_IMPL.md  package.xml
src/qyh_jaka_control/config/: robot_config.yaml  smooth_params.yaml
src/qyh_jaka_control/docs/: ARCHITECTURE_MIGRATION.md  MULTI_ARCH_BUILD.md
src/qyh_jaka_control/launch/: jaka_control.launch.py
src/qyh_jaka_control/scripts/: qyh_jaka_joint_adapter_node.py  reorganize_thirdparty.ps1  reorganize_thirdparty.sh
src/qyh_jaka_control/src/: jaka_control_node.cpp  jaka_control_node.hpp  jaka_service_handlers.cpp  jaka_service_handlers.hpp
src/qyh_lift_control/: CMakeLists.txt
src/qyh_lift_control/launch/: lift_control.launch.py
src/qyh_lift_control/src/: lift_control_node.cpp  lift_control_node_main.cpp
src/qyh_shutdown/: CMakeLists.txt  package.xml
src/qyh_shutdown/config/: shutdown_params.yaml
src/qyh_shutdown/src/: qyh_shutdown_node.cpp
src/qyh_vr_bridge/: CMakeLists.txt
src/qyh_vr_bridge/src/: vr_bridge_node.cpp
src/qyh_vr_button_event/: CMakeLists.txt  README.md  package.xml
src/qyh_vr_button_event/config/: config.yaml
src/qyh_vr_button_event/launch/: qyh_vr_button_event.launch.py
src/qyh_vr_button_event/src/: qyh_vr_button_event.cpp
(+700 files in other folders)
