<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qyh_act_inference</name>
  <version>1.0.0</version>
  <description>ACT (Action Chunking Transformer) 推理部署包，用于具身智能模型的实时推理控制</description>
  <maintainer email="robot@qyh.com">QYH Robot Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- ROS2 核心依赖 -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <!-- 项目消息依赖 -->
  <depend>qyh_jaka_control_msgs</depend>
  <depend>qyh_gripper_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
